Thực hành web 27-08-2025 (bản đầy đủ)
Bao gồm login + register

--- a/ThWeb_27_08/src/main/webapp/WEB-INF/web.xml
+++ b/ThWeb_27_08/src/main/webapp/WEB-INF/web.xml
@@ -29,4 +29,24 @@
     <servlet-name>HomeController</servlet-name>
     <url-pattern>/HomeController</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>RegisterController</display-name>
+    <servlet-name>RegisterController</servlet-name>
+    <servlet-class>vn.iostar.controller.RegisterController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>RegisterController</servlet-name>
+    <url-pattern>/RegisterController</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>WaitingController</display-name>
+    <servlet-name>WaitingController</servlet-name>
+    <servlet-class>vn.iostar.controller.WaitingController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>WaitingController</servlet-name>
+    <url-pattern>/WaitingController</url-pattern>
+  </servlet-mapping>
 </web-app>
